# FactoryGame

./: CMakeLists.txt  README.md
src/: main.c
src/building/: building.h
src/building/conveyor_belt/: conveyor_belt.h
src/data_structures/vector_array/: vector_array.c  vector_array.h
src/map/: map.c  map.h
src/other/geometry/: direction.h  position.h
test/data_structures/: test_vector_array.c
